# doc-md

./: .gitignore  CLAUDE.md  PLAN.md  PROJECT_STATUS.md  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/workflows/: ci.yml
docs/: TECHNICAL_CONTEXT.md
sidecar/: pyproject.toml
sidecar/src/doc_md/: __init__.py  __main__.py  indexer.py  main.py  parser.py  rpc.py  search.py
sidecar/tests/: test_indexer.py  test_parser.py  test_rpc.py  test_search.py
src/: App.svelte  app.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs  sidecar.rs  watcher.rs
src-tauri/src/commands/: files.rs  mod.rs  vault.rs
src/lib/components/: BacklinksPanel.svelte  CommandPalette.svelte  Editor.svelte  EditorPane.svelte  FileExplorer.svelte  FileTreeNode.svelte  FormattingToolbar.svelte  GraphView.svelte  MarkdownPreview.svelte  SearchModal.svelte  SettingsPanel.svelte  TabBar.svelte  TagsPanel.svelte
src/lib/editor/: autocomplete.ts  markdown.ts  setup.ts  theme.ts  toolbar.ts  wikilink.ts
src/lib/services/: indexer.ts  parser.ts  search.ts  tauri.ts  templates.ts
src/lib/stores/: settings.svelte.ts  theme.svelte.ts  vault.svelte.ts
src/lib/types/: index.ts
tasks/: lessons.md  todo.md
