[package]
name = "doc-md"
version = "0.1.0"
edition = "2021"

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
notify = "7"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[lib]
name = "doc_md_lib"
crate-type = ["staticlib", "cdylib", "rlib"]
